--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.34.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.515.0",
     "motion": "^12.17.0",
     "next": "15.3.2",
     "react": "^19.0.0",
